--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style">
 
 </head>
 <body>
@@ -21,19 +21,26 @@
       <br>
 
       <div class="text-center">
-        <a href="tables.html"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
-        <a href="reservation.html"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+        <a href="/tables"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+        <a href="/reservation"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-          <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
+          <p><a href="/api/table">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
       </div>
     </footer>
 
   </div>
-
+  <div id=counter class=counter></div>
 </body>
+
+<script type="text/javascript">
+  $.get("/api/homepageCounter")
+    .done(function(data) {
+    $("#counter").html("Page Count: " + data);
+  })
+</script>
 </html>
